# satisfaction

./: .gitignore  Cargo.toml  README.md  compilation.batch  plotting.batch
maps/: tents-4x4-e1.txt
solver/: Cargo.toml
solver-bench/: Cargo.toml
solver-bench/src/: config.rs  main.rs  plotting.rs
solver-cli/: Cargo.toml
solver-cli/src/: cnf.rs  config.rs  dpll.rs  main.rs  plotting.rs
solver/benches/: bench.rs
solver/src/: assignment.rs  branching_strategy.rs  brueforce.rs  bruteforce.rs  cadical_solver.rs  cdcl.rs  cnf.rs  deletion_strategy.rs  dpll.rs  dpll_watched_literals.rs  lib.rs  preprocessing.rs  sat_solution.rs  sat_solver.rs  solver.rs  time_limited_solver.rs  timed_solver.rs
solver/src/cdcl/: abstract_factory.rs  clause.rs  mod.rs  satisfaction.rs  update.rs  util.rs  variable.rs
solver/src/cdcl/branching_strategies/: branching_strategy.rs  mod.rs  naive.rs  vsids.rs
solver/src/cdcl/deletion_strategies/: berk_min.rs  deletion_strategy.rs  mod.rs  no_deletion.rs
solver/src/cdcl/learning_schemes/: learning_scheme.rs  mod.rs  relsat.rs
solver/src/cdcl/preprocessor/: mod.rs  niver.rs  no_tautologies.rs  preprocessor.rs  subsumtion.rs
solver/src/cdcl/preprocessors/: list_preprocessor.rs  mod.rs  niver.rs  no_preprocessing.rs  no_tautologies.rs  preprocessor.rs  subsumption.rs
solver/src/cdcl/restart_policies/: fixed.rs  geometric.rs  luby.rs  mod.rs  never.rs  restart_policy.rs
solver/src/solvers/: external_solver.rs  interruptible_solver.rs  mod.rs  time_limited_solver.rs  timed_solver.rs
solver/tests/: sat_solving_test.proptest-regressions  sat_solving_test.rs
src/: cadical.rs  cnf.rs  control_widget.rs  field.rs  field_widget.rs  formula.rs  game.rs  main.rs  message.rs  puzzle_creation.rs  random_creation_widget.rs
tents/: Cargo.toml  README.md
tents/maps/: tents-8x8-e1-fail-2.txt  tents-8x8-e1-fail-3.txt
tents/src/: cnf.rs  control_widget.rs  field.rs  field_widget.rs  game.rs  log_widget.rs  main.rs  message.rs  puzzle_creation.rs  random_creation_widget.rs
tents/src/field/: .#field.rs  field.rs  mod.rs  puzzle_creation.rs  sat_conversion.rs
tents/src/widgets/: control_widget.rs  field_widget.rs  log_widget.rs  mod.rs  random_creation_widget.rs
tents/src/widgets/util/: log.rs  mod.rs  number_input.rs
