[package]
name = "sat-2020-project-01"
version = "0.1.0"
authors = [
    "radrow <radrowicki@gmail.com>",
    "lankheit <a.lankheit@campus.lmu.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.2.0", features = ["svg"] }
iced_native = "0.3.0"
rand = "0.7"