[package]
name = "solver-cli"
version = "0.1.0"
authors = [
    "Radoslaw Rowicki <radrowicki@gmail.com>",
    "Alexander Lankheit <a.lankheit@campus.lmu.de>",
    "Korbinian Federholzner <k.federholzner@campus.lmu.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solver = {path = "../solver"}
clap = "2.33.3"