[package]
name = "solver"
version = "0.1.0"
authors = [
    "Radosław Rowicki <radrow@students.mimuw.edu.pl>",
    "Alexander Lankheit <a.lankheit@campus.lmu.de>",
    "Korbinian Federholzner <k.federholzner@campus.lmu.de>",
]
edition = "2018"

[dependencies]
rand = "0.7"
cadical = "0.1.13"
itertools = "0.9.0"
rayon = "1.5.0"
dimacs = "0.2.0"
async-trait = "0.1.42"
auto_impl = "0.4.1"
futures = "0.3.12"
tokio = { version = "1.1.1", features = ["rt", "rt-multi-thread", "time", "process", "io-util"] }

[dev-dependencies]
proptest = "0.10.1"
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
